--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,11 +4,8 @@
 
 // Variables
 @import "variables";
+@import "home";
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
-
-body{
-  background-color:red;
-}
