--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,152 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);@charset "UTF-8";
 
+html,
+body {
+  background-color: #fff;
+  color: #636b6f;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  height: 100vh;
+  margin: 0;
+}
+
+.full-height {
+  height: 100vh;
+}
+
+.flex-center {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.position-ref {
+  position: relative;
+}
+
+.top-right {
+  position: absolute;
+  right: 10px;
+  top: 18px;
+}
+
+.title {
+  font-size: 84px;
+}
+
+.links > a {
+  color: #636b6f;
+  padding: 0 25px;
+  font-size: 12px;
+  font-weight: 600;
+  letter-spacing: .1rem;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.m-b-md {
+  margin-bottom: 30px;
+  color: white;
+  text-shadow: 2px 2px black;
+}
+
+.navbar {
+  margin-bottom: 0px !important;
+  -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
+}
+
+.content {
+  min-height: 100vh;
+  background-image: url(/images/back.jpg?39f7cd16d690f6f1c48c6eb356ec0391);
+  background-size: cover;
+  color: white;
+  padding-top: 200px;
+  background-position: bottom;
+  text-align: center;
+}
+
+.links {
+  font-size: 1.3em;
+}
+
+.links a {
+  color: white;
+  font-weight: inherit;
+  font-size: inherit;
+  text-shadow: 2px 2px black;
+}
+
+.links:hover {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover,
+a:focus {
+  color: white !important;
+  text-decoration: none !important;
+}
+
+.navbar-nav li {
+  border: 1px solid black;
+  border-top: none;
+  border-bottom: none;
+}
+
+.navbar-nav li:first-child {
+  border-right: none;
+}
+
+.navbar-nav li:nth-child(2) {
+  border-right: none;
+}
+
+.navbar-nav a {
+  color: black !important;
+  font-weight: bold;
+  text-transform: uppercase;
+  -webkit-transition: all 0.5s ease !important;
+  transition: all 0.5s ease;
+}
+
+.navbar-nav a:hover {
+  color: orange !important;
+  -webkit-transition: all 0.5s ease !important;
+  transition: all 0.5s ease;
+}
+
+a.navbar-brand {
+  text-transform: uppercase;
+  color: black !important;
+  letter-spacing: 4px;
+}
+
+a.navbar-brand:hover {
+  color: black !important;
+}
+
+li.li_deco {
+  border: none !important;
+}
+
+.links a {
+  -webkit-transition: all 0.5s ease !important;
+  transition: all 0.5s ease;
+}
+
+.links a:hover {
+  color: orange !important;
+  -webkit-transition: all 0.5s ease !important;
+  transition: all 0.5s ease;
+}
+
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
@@ -8348,9 +8495,5 @@ button.close {
   .hidden-print {
     display: none !important;
   }
-}
-
-body {
-  background-color: red;
 }
 
