--- a/resources/assets/sass/_home.scss
+++ b/resources/assets/sass/_home.scss
@@ -4,7 +4,7 @@ body {
     color: #636b6f;
     font-family: 'Raleway', sans-serif;
     font-weight: 100;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
 }
 
@@ -143,3 +143,71 @@ li.li_deco {
         transition: all 0.5s ease;
     }
 }
+
+li.li_registrer{
+    border-right: 1Px solid black!important;
+}
+
+.logo {
+	background-image: url(../images/logo.png);
+    background-size:cover;
+        width: 40px;
+    height: 32px;
+        float: left;
+    margin-top: 8px;
+    margin-right: 20px;
+    display: inline-block;
+}
+
+.container-connexion{
+    padding-top: 120px;
+    background-image: url(../images/back_co.jpg);
+    background-size:cover;
+    background-position: top;
+    width: 100%!important;
+    min-height: 100vh;;
+    
+    .row{
+    width: 70%;
+    margin: 0 auto;
+    }
+    
+    .panel-default{
+        text-align: center;
+        color: black;
+        border: none;
+        box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
+    }
+    
+    .panel-heading{
+        text-align: center;
+    font-weight: bold;
+    color: black;
+    font-size: 2em;
+    }
+    
+    .form-horizontal .control-label{
+        padding-bottom: 15px;
+    }
+}
+
+.btn-primary{
+    border: none!important;
+ background-color: orange!important;
+    -webkit-transition: all 0.5s ease!important;
+        -moz-transition: all 0.5s ease;
+        -ms-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;   
+}
+
+.btn-link:hover, .btn-link:focus{
+    color: orange!important;
+    -webkit-transition: all 0.5s ease!important;
+        -moz-transition: all 0.5s ease;
+        -ms-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+}
+
+input:-webkit-autofill { background-color: #000 !important; }
