--- a/resources/assets/sass/_home.scss
+++ b/resources/assets/sass/_home.scss
@@ -214,8 +214,6 @@ input:-webkit-autofill {
 .container-list-product {
     padding-top: 20px;
     background-image: url(../images/back_list.jpg);
-
-
     width: 100%!important;
     min-height: 92vh;
     .row {
@@ -224,6 +222,7 @@ input:-webkit-autofill {
     }
     .panel-heading {
         text-align: center;
+        border-color: black!important;
     }
     ul {
         list-style: none;
@@ -244,7 +243,6 @@ input:-webkit-autofill {
                     display: inline-block;
                 }
                 .prix_product {
-                   
                     float: right;
                     font-weight: bold;
                     font-size: 1.2em;
@@ -262,21 +260,106 @@ input:-webkit-autofill {
                     border: none;
                     display: block;
                     -webkit-transition: all 0.5s ease!important;
-    -moz-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-                    
-                    &:hover{
+                    -moz-transition: all 0.5s ease;
+                    -ms-transition: all 0.5s ease;
+                    -o-transition: all 0.5s ease;
+                    transition: all 0.5s ease;
+                    &:hover {
                         -webkit-transition: all 0.5s ease!important;
-    -moz-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-                        background-color:grey;
+                        -moz-transition: all 0.5s ease;
+                        -ms-transition: all 0.5s ease;
+                        -o-transition: all 0.5s ease;
+                        transition: all 0.5s ease;
+                        background-color: grey;
                     }
                 }
             }
         }
     }
+}
+
+.product_list_choice {
+    
+    .no_item{
+        float: left;
+    }
+    h3 {
+        color: black;
+        font-style: italic;
+        font-size: 15px;
+        margin-left: 4px;
+    }
+    p {
+        float: right;
+        font-style: italic;
+    }
+    button {
+        margin-top: 10px;
+        border-radius: 15px;
+        /* border-color: white; */
+        box-shadow: none;
+        background-color: orange;
+        /* -webkit-appearance: none; */
+        color: white;
+        padding-left: 10Px;
+        padding-right: 10px;
+        border: none;
+        display: block;
+        -webkit-transition: all 0.5s ease!important;
+        -moz-transition: all 0.5s ease;
+        -ms-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+        &:hover {
+            -webkit-transition: all 0.5s ease!important;
+            -moz-transition: all 0.5s ease;
+            -ms-transition: all 0.5s ease;
+            -o-transition: all 0.5s ease;
+            transition: all 0.5s ease;
+            background-color: grey;
+        }
+    }
+    .panel-heading {
+        text-align: center;
+        border-color: black!important;
+    }
+    .panel_footer {
+        font-weight: bold;
+        color: black;
+    }
+}
+
+.alert_connexion {
+    text-align: center;
+    color: black;
+    font-weight: bold;
+    padding-top: 220px;
+    background-image: url(../images/back_alert_co.jpg);
+    background-size: cover;
+    width: 100%!important;
+    min-height: 92vh;
+}
+
+.item_list_product {
+    border-bottom: 1px solid black;
+    padding-bottom: 10px;
+    .list_prix {
+        font-weight: bold;
+        display: inline-block;
+    }
+    .prix_val {
+        display: inline-block;
+    }
+}
+
+.nom_total{
+    width: 75%;
+    display: inline-block;
+}
+
+.total{
+    display: inline-block;
+    float: right;
+        font-weight: bold;
+    font-size: 2em;
 }
