--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,11 @@
 // Variables
 @import "variables";
 @import "home";
+@import "create";
+@import "list";
+@import "connexion";
+@import "mobile";
+
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
