--- a/resources/assets/sass/_home.scss
+++ b/resources/assets/sass/_home.scss
@@ -159,207 +159,20 @@ li.li_registrer {
     display: inline-block;
 }
 
-.container-connexion {
-    padding-top: 120px;
-    background-image: url(../images/back_co.jpg);
-    background-size: cover;
-    background-position: top;
-    width: 100%!important;
-    min-height: 100vh;
-    .row {
-        width: 70%;
-        margin: 0 auto;
-    }
-    .panel-default {
-        text-align: center;
-        color: black;
-        border: none;
-        box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
-    }
-    .panel-heading {
-        text-align: center;
-        font-weight: bold;
-        color: black;
-        font-size: 2em;
-    }
-    .form-horizontal .control-label {
-        padding-bottom: 15px;
-    }
-}
-
-.btn-primary {
-    border: none!important;
-    background-color: orange!important;
+.link_route{
+    color: black;
     -webkit-transition: all 0.5s ease!important;
-    -moz-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-.btn-link:hover,
-.btn-link:focus {
-    color: orange!important;
-    -webkit-transition: all 0.5s ease!important;
-    -moz-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-input:-webkit-autofill {
-    background-color: #000 !important;
-}
-
-.container-list-product {
-    padding-top: 20px;
-    background-image: url(../images/back_list.jpg);
-    width: 100%!important;
-    min-height: 92vh;
-    .row {
-        width: 90%;
-        margin: 0 auto;
-    }
-    .panel-heading {
-        text-align: center;
-        border-color: black!important;
-    }
-    ul {
-        list-style: none;
-        li {
-            margin-bottom: 30px;
-            img {
-                border-radius: 30px;
-                display: inline-block;
-            }
-            .detail_product {
-                margin-left: 15px;
-                display: inline-block;
-                width: 77%;
-                vertical-align: middle;
-                .nom_product {
-                    text-transform: uppercase;
-                    font-weight: bold;
-                    display: inline-block;
-                }
-                .prix_product {
-                    float: right;
-                    font-weight: bold;
-                    font-size: 1.2em;
-                }
-                button {
-                    margin-top: 10px;
-                    border-radius: 15px;
-                    /* border-color: white; */
-                    box-shadow: none;
-                    background-color: orange;
-                    /* -webkit-appearance: none; */
-                    color: white;
-                    padding-left: 10Px;
-                    padding-right: 10px;
-                    border: none;
-                    display: block;
-                    -webkit-transition: all 0.5s ease!important;
-                    -moz-transition: all 0.5s ease;
-                    -ms-transition: all 0.5s ease;
-                    -o-transition: all 0.5s ease;
-                    transition: all 0.5s ease;
-                    &:hover {
-                        -webkit-transition: all 0.5s ease!important;
-                        -moz-transition: all 0.5s ease;
-                        -ms-transition: all 0.5s ease;
-                        -o-transition: all 0.5s ease;
-                        transition: all 0.5s ease;
-                        background-color: grey;
-                    }
-                }
-            }
-        }
-    }
-}
-
-.product_list_choice {
+        -moz-transition: all 0.5s ease;
+        -ms-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;
     
-    .no_item{
-        float: left;
-    }
-    h3 {
-        color: black;
-        font-style: italic;
-        font-size: 15px;
-        margin-left: 4px;
-    }
-    p {
-        float: right;
-        font-style: italic;
-    }
-    button {
-        margin-top: 10px;
-        border-radius: 15px;
-        /* border-color: white; */
-        box-shadow: none;
-        background-color: orange;
-        /* -webkit-appearance: none; */
-        color: white;
-        padding-left: 10Px;
-        padding-right: 10px;
-        border: none;
-        display: block;
+    &:hover{
+        color:orange!important;
         -webkit-transition: all 0.5s ease!important;
         -moz-transition: all 0.5s ease;
         -ms-transition: all 0.5s ease;
         -o-transition: all 0.5s ease;
         transition: all 0.5s ease;
-        &:hover {
-            -webkit-transition: all 0.5s ease!important;
-            -moz-transition: all 0.5s ease;
-            -ms-transition: all 0.5s ease;
-            -o-transition: all 0.5s ease;
-            transition: all 0.5s ease;
-            background-color: grey;
-        }
     }
-    .panel-heading {
-        text-align: center;
-        border-color: black!important;
-    }
-    .panel_footer {
-        font-weight: bold;
-        color: black;
-    }
-}
-
-.alert_connexion {
-    text-align: center;
-    color: black;
-    font-weight: bold;
-    padding-top: 220px;
-    background-image: url(../images/back_alert_co.jpg);
-    background-size: cover;
-    width: 100%!important;
-    min-height: 92vh;
-}
-
-.item_list_product {
-    border-bottom: 1px solid black;
-    padding-bottom: 10px;
-    .list_prix {
-        font-weight: bold;
-        display: inline-block;
-    }
-    .prix_val {
-        display: inline-block;
-    }
-}
-
-.nom_total{
-    width: 75%;
-    display: inline-block;
-}
-
-.total{
-    display: inline-block;
-    float: right;
-        font-weight: bold;
-    font-size: 2em;
 }
